fixtures/cs-cmp-01/bad/password-loose-equal.js
const crypto = require("crypto");

function checkPassword(password, stored) {
	return password == stored;
}

module.exports = { checkPassword, crypto };
